applications/robot-github/sync-agent/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
  name: ingress
  namespace: robot-github
spec:
  tls:
    - hosts:
        - robot-github.osinfra.cn
      secretName: secret-tls-sync-agent
  rules:
    - host: robot-github.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: service-sync-agent
              servicePort: 8888
            path: /v1
